Implementación de Entity Framework y generación de modelos desde la base de datos.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=GEANMR\\RAIDERSERVER;Database=TrabajadoresPrueba;Integrated Security=True;TrustServerCertificate=True;User Id=sa;Password=12345;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
